refactor: rename DebugApi model into DebugApiV2